<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuTitle"
        android:id="@+id/titleView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="32dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuSP"
        android:id="@+id/SPButton"
        android:layout_below="@+id/titleView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuMP"
        android:id="@+id/MPButton"
        android:layout_below="@+id/SPButton"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/SPButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuRecords"
        android:id="@+id/RecordsButton"
        android:layout_below="@+id/MPButton"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/MPButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuSettings"
        android:id="@+id/SettingsButton"
        android:layout_below="@+id/RecordsButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuUsername"
        android:id="@+id/MenuUsernameView"
        android:layout_below="@+id/titleView"
        android:layout_alignParentEnd="true"
        android:textSize="20dp"
        android:layout_marginTop="10dp" />


    <mobileclasstesting.tictactoe.MenuCanvas
        android:id="@+id/menuCanvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SettingsButton"/>

</RelativeLayout>
