<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mobileclasstesting.tictactoe.MultiPlayerActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quit"
        android:id="@+id/MPQuitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status"
        android:id="@+id/MPStatusView"
        android:layout_above="@+id/MPQuitButton"
        android:layout_alignParentStart="true"
        android:textSize="24dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Opponent"
        android:id="@+id/MPOpponentView"
        android:layout_above="@+id/MPStatusView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Team"
        android:id="@+id/MPTeamView"
        android:layout_above="@+id/MPOpponentView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:textSize="24dp" />



    <mobileclasstesting.tictactoe.GameBoardCanvas
        android:id="@+id/MPBoardCanvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SettingsButton"
        android:layout_above="@+id/MPTeamView" />




</RelativeLayout>
