<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mobileclasstesting.tictactoe.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingsTitle"
        android:id="@+id/SettingsView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="32dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:textSize="24dp"
        android:layout_below="@+id/userNameLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Apply"
        android:id="@+id/ApplyButton"
        android:textSize="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingsUser"
        android:id="@+id/userNameLabel"
        android:layout_below="@+id/SettingsView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingsIP"
        android:id="@+id/IPLabel"
        android:layout_below="@+id/usernameField"
        android:layout_alignParentStart="true"
        android:textSize="24dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IPField"
        android:layout_below="@+id/IPLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:textSize="24dp" />
</RelativeLayout>
