<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mobileclasstesting.tictactoe.SinglePlayerActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quit"
        android:id="@+id/SPQuitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Team"
        android:id="@+id/SPTeamView"
        android:textSize="24dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/SPStatusView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status"
        android:id="@+id/SPStatusView"
        android:layout_above="@+id/SPQuitButton"
        android:layout_alignParentStart="true"
        android:textSize="24dp"
        android:layout_marginBottom="20dp" />



    <mobileclasstesting.tictactoe.GameBoardCanvas
        android:id="@+id/SPBoardCanvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SettingsButton"
        android:layout_above="@+id/SPTeamView"
        android:layout_marginBottom="25dp" />



</RelativeLayout>
